fixed desktop y overflow

--- a/style.css
+++ b/style.css
@@ -285,10 +285,11 @@ p {
 
   #main {
     align-items: center;
+    margin-bottom: 0;
   }
   .btn {
     font-size: 2.5rem;
-    margin: 2rem;
+    margin: 1rem;
     padding: 2rem;
   }
   #footer svg {
